<resources>
    <string name="app_name">Vocab</string>
    <string name="title_activity_navigation_drawer">Navigation</string>
    <string name="title_activity_add_vocab">Neue Vokabel anlegen</string>
    <string name="title_activity_edit_vocab">Vokabeln bearbeiten</string>
    <string name="title_activity_express_learn">Express-Modus</string>
    <string name="title_activity_input_learn">Tipp-Modus</string>
    <string name="title_activity_list_vocab">Vokabelliste</string>

    <!-- Sample String -->
    <string name="sample_string">Beispieltext</string>

    <!-- LanguageActivity AlertDialog -->
    <string name="source_language">Ausgangssprache</string>
    <string name="target_language">Zielsprache</string>
    <string name="source_language_question">Welche Sprache sprichst du?</string>
    <string name="target_language_question">Welche Sprache lernst du?</string>
    <string name="language_title">Sprachbeziehung festlegen</string>
    <string name="lang_message">Bitte gib deine gewünschte Ausgangssprache und Zielsprache ein.</string>
    <string name="language_positive_button">Erstellen</string>
    <string name="language_negative_button">Abbrechen</string>
    <string name="no_lang_input">Bitte Sprachbeziehung eingeben</string>

    <!-- Nav items -->
    <string name="vocabs">Meine Vokabeln</string>
    <string name="lists">Meine Listen</string>
    <string name="learn">Lernen</string>
    <string name="last_entries">Meine letzten Einträge</string>
    <string name="trophies">Erfolge</string>
    <string name="brain">Gedächtnis</string>
    <string name="about">Über</string>
    <string name="language_change">Sprache wechseln</string>
    <string name="error">Ein unerwarteter Fehler ist aufgetreten</string>

    <!-- For ActionBarDrawerToggle -->
    <string name="drawer_open">Öffne NavigationDrawer</string>
    <string name="drawer_close">Schließe NavigationDrawer</string>

    <!-- NavigationFragmentOne-->
    <string name="vocab_add_hint">Klicke auf den Button, um Vokabeln hinzuzufügen.</string>

    <!-- AddVocabFragmentOne -->
    <string name="vocab_hint">Vokabel eingeben</string>
    <string name="translate">Übersetzen</string>
    <string name="select_list">Zu Liste hinzufügen (optional)</string>
    <string name="list_prompt">Liste auswählen</string>
    <string name="part_of_speech">Wortart</string>
    <string name="part_of_speech_hint">Wortart eingeben</string>
    <string name="importance">Wichtigkeit</string>
    <string name="vocab_negative_button">Abbrechen</string>
    <string name="vocab_positive_button">Hinzufügen</string>
    <string name="no_vocab_input">Bitte Vokabel eingeben</string>

    <string name="edit_vocab_finished"> Fertig </string>
    <string name="edit_vocab_button_right">-)</string>
    <string name="edit_vocab_button_left">(-</string>

    <!-- NavigationFragmentTwo AlertDialog-->
    <string name="list_name">Name der Liste</string>
    <string name="list_title">Liste erstellen</string>
    <string name="list_message">Bitte gib einen Namen für die Liste ein.</string>
    <string name="list_positive_button">Erstellen</string>
    <string name="list_negative_button">Abbrechen</string>
    <string name="no_list_input">Bitte Name der Liste eingeben</string>

    <string name="list_edit_title">Bitte neuen Namen eingeben</string>
    <string name="list_edit_button">Umbennen</string>

    <string name="spinner_no_list">Liste auswählen</string>

    <!-- LearnVocabFragmentThree -->
    <string name="toast_choose_learn_direction">Wähle zuerst eine Lernrichtung</string>
    <string name="toast_no_vocabs">Du hast noch keine Vokabeln eingetragen</string>
    <string name="toast_no_unknown_vocabs">All deine Vokabeln sind im Langzeitgedächtnis, trage neue Vokabeln ein oder entferne diese aus dem "Gedächtnis"!</string>

    <string name="learning_direction">Lern-Richtung</string>
    <string name="learning_1_2">Deutsch zu Englisch</string>
    <string name="learning_2_1">Englisch zu Deutsch</string>
    <string name="learning_mixed">Gemischt</string>

    <string name="learning_meta">Metadaten</string>
    <string name="learning_meta_word_class">Wortart</string>
    <string name="learning_meta_importance">Wichtigkeit</string>
    <string name="learning_meta_phase">Phase</string>
    <string name="learning_meta_number_of_meanings">Anzahl der Bedeutungen</string>
    <string name="learning_meta_all">Alle</string>
    <string name="word_class_noun">Substantive</string>
    <string name="word_class_verb">Verben</string>
    <string name="word_class_adjectiv">Adjektive</string>
    <string name="word_class_rest">Sonstige</string>

    <string name="learning_button_learn">Tipp-Modus</string>
    <string name="learning_button_express_modus">Express-Modus</string>

    <string name="vocab_learning_language">Los geht\'s!</string>
    <string name="vocab_knowing_language">Gib dein Bestes!</string>
    <string name="vocab_counter">0</string>
    <string name="number_of_meanings">*</string>

    <string name="toast_manual">Swipe nach links: Du weißt die Vokabel. \n\nTap auf Bildschirm: Du weißt die Vokabel nicht.</string>

    <!-- Result AlertDialog -->
    <string name="result">Ergebnis</string>
    <string name="finished">OK</string>

    <!-- Exit AlertDialog -->
    <string name="exit_title">Verlassen</string>
    <string name="exit_message">Willst du die Abfrage wirklich verlassen?</string>
    <string name="exit_positive_button">Verlassen</string>
    <string name="exit_negative_button">Abbrechen</string>

    <!-- Delete AlertDialogs -->
    <string name="language_delete_title">Sprachbeziehung löschen</string>
    <string name="language_delete_message">Möchtest du die Sprachbeziehung und darin enthaltene Vokabeln und Listen wirklich löschen?</string>
    <string name="vocab_delete_title">Vokabel löschen</string>
    <string name="vocab_delete_message">Möchtest du diese Vokabel wirklich löschen?</string>
    <string name="list_delete_title">Liste löschen</string>
    <string name="list_delete_message">Möchtest du diese Liste wirklich löschen?</string>
    <string name="delete_positive_button">Löschen</string>
    <string name="delete_negative_button">Abbrechen</string>

    <!-- Option AlertDialogs -->
    <string name="option_choose">Aktion wählen</string>
    <string name="option_edit">Umbenennen</string>
    <string name="option_look_vocab">Vokabeln ansehen</string>
    <string name="option_learnList">Lernen</string>
    <string name="option_delete">Löschen</string>

    <string name="tab">\t</string>

    <!-- NavigationFragmentFour -->
    <string name="last_20_entries">Deine 20 letzten Einträge</string>

    <!-- NavigationFragmentFive -->
    <string name="vocab_success">Vokabelerfolg</string>
    <string name="list_success">Listenerfolg</string>
    <string name="learn_success">Lernerfolg</string>

    <string name="lock_start_success">Füge eine Vokabel hinzu</string>
    <string name="lock_direction_success">Füge 25 Vokabeln hinzu</string>
    <string name="lock_bag_success">Füge 100 Vokabeln hinzu</string>
    <string name="lock_note_success">Füge eine Liste hinzu</string>
    <string name="lock_toolbox_success">Füge 5 Listen hinzu</string>
    <string name="lock_server_success">Füge 20 Listen hinzu</string>
    <string name="lock_express_success">Absolviere den Express-Modus fehlerfrei</string>
    <string name="lock_ueberflieger_success">Absolviere den Tipp-Modus fehlerfrei</string>
    <string name="lock_sprache_success">Lege drei Sprachen an</string>

    <string name="start_success">Klappe auf: Erster Vokabeleintrag</string>
    <string name="direction_success">Richtige Richtung: 25 Vokabeleinträge</string>
    <string name="bag_success">Vollbepackt: 100 Vokabeleinträge</string>
    <string name="note_success">Klemmbrett: Erste Liste</string>
    <string name="toolbox_success">Handwerkszeug: Fünf Listen</string>
    <string name="server_success">Organizer: 20 Listen</string>
    <string name="express_success">Speedy: Alles richtig</string>
    <string name="ueberflieger_success">Überflieger: Alles richtig</string>
    <string name="sprache_success">Sprachakrobat: Drei Sprachen</string>

    <!-- NavigationFragmenSix  -->
    <string name="menu_search">Suchen</string>
    <string name="reset_title">Vergessen?</string>
    <string name="reset_message">Willst du diese Vokabel wieder lernen?</string>
    <string name="reset_all_vocab">Amnesie</string>
    <string name="reset_all_title">Amnesie</string>
    <string name="reset_all_message">Willst du wirklich alle Vokabeln wieder lernen?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>

    <!-- NavigationFragmenSeven  -->
    <string name="ueber_sub_title">Lernen - leicht gemacht</string>
    <string name="ueber_text">Die Idee zu Vocab entstand im Rahmen des Kurses \"Entwicklung einer Applikation mit dem Android-Framework\" unter Leitung von Dr. Markus Heckner an der Universität Regensburg. \nVocab soll es dem User ermöglichen, Vokabeln in jeglicher Sprachbeziehung zu speichern, diese in Listen einzuordnen und mit Metadaten zu versehen. Mittels der beiden Lern-Modi \"Tipp-Modus\" und \"Express-Modus\" können diese - nach Auswahl der Lernrichtung und optionaler Auswahl der Wortart oder Liste - abgefragt werden, wodurch gelernte Vokabeln im \"Gedächtnis\" abgelegt werden. \nZudem werden im Laufe des Vokabellernens als weiterer Ansporn \"Erfolge\" freigeschalten.</string>


</resources>
