<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <TextView
            android:id="@+id/learning_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learning_direction"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:layout_centerHorizontal="true"
            />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/learning_direction"
        android:id="@+id/linear_layout_checkbox_learning_direction"
        android:padding="10dp"
        >

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learning_1_2"
            android:textSize="16sp"
            android:id="@+id/checkBox_learning_1_2" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/learning_2_1"
            android:textSize="16sp"
            android:id="@+id/checkBox_learning_2_1" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:text="@string/learning_mixed"
            android:id="@+id/checkBox_learning_mixed" />


    </LinearLayout>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/learning_linearLayout_bottom">

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/learning_button_learn"
            android:id="@+id/button1"
            android:layout_below="@+id/linear_layout_learning_meta"
            android:background="@color/color_accent"
            android:textColor="@color/color_white"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/learning_button_express_modus"
            android:id="@+id/button"
            android:layout_below="@+id/linear_layout_learning_meta"
            android:background="@color/color_express_black"
            android:textColor="@color/color_white"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_margin="16dp"/>


    </LinearLayout>
</RelativeLayout>