<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/wordClassTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/color_accent"
        android:padding="16dp"
        android:text="@string/part_of_speech"
        android:textAllCaps="true"
        android:textColor="@color/color_white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/wordClassET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wordClassTV"
        android:layout_margin="16dp"
        android:hint="@string/part_of_speech_hint" />

    <TextView
        android:id="@+id/importanceTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wordClassET"
        android:layout_centerHorizontal="true"
        android:background="@color/color_accent"
        android:padding="16dp"
        android:text="@string/importance"
        android:textAllCaps="true"
        android:textColor="@color/color_white"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/importanceTV"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:numStars="3" />

</RelativeLayout>