<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/wordClassTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/color_primary"
        android:padding="16dp"
        android:text="@string/part_of_speech"
        android:textAllCaps="true"
        android:textColor="@color/color_white"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/wordClassSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wordClassTV"
        android:layout_margin="16dp" />

    <TextView
        android:id="@+id/importanceTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wordClassSpinner"
        android:layout_centerHorizontal="true"
        android:background="@color/color_primary"
        android:padding="16dp"
        android:text="@string/importance"
        android:textAllCaps="true"
        android:textColor="@color/color_white"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/customRatingBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/importanceTV"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:isIndicator="false"
        android:numStars="3"
        android:rating="0.0"
        android:stepSize="1.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/editVocabButtonLeft2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/color_primary"
            android:padding="30dp"
            android:text="@string/edit_vocab_button_left"
            android:textColor="@color/color_white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/editVocabButtonfinished2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/color_accent"
            android:paddingTop="30dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:paddingBottom="30dp"
            android:text="@string/edit_vocab_finished"
            android:textColor="@color/color_white" />


        <Button
            android:id="@+id/editVocabButtonRight2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/color_primary"
            android:padding="30dp"
            android:text="@string/edit_vocab_button_right"
            android:textColor="@color/color_white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </LinearLayout>

</RelativeLayout>